[project]
name = "daylevels"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (==4.13.3)",
    "blinker (==1.9.0)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "flask (==3.1.0)",
    "frozendict (==2.4.6)",
    "html5lib (==1.1)",
    "idna (==3.10)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.5)",
    "lxml (==5.3.0)",
    "markupsafe (==3.0.2)",
    "multitasking (==0.0.11)",
    "numpy (==2.2.2)",
    "pandas (==2.2.3)",
    "peewee (==3.17.9)",
    "platformdirs (==4.3.6)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.1)",
    "requests (==2.32.3)",
    "setuptools (==75.8.0)",
    "six (==1.17.0)",
    "soupsieve (==2.6)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2025.1)",
    "urllib3 (==2.3.0)",
    "webencodings (==0.5.1)",
    "werkzeug (==3.1.3)",
    "wheel (==0.45.1)",
    "yfinance (==0.2.52)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
